--- a/index.html
+++ b/index.html
@@ -3202,6 +3202,7 @@ This method can also artificially reduce variability of data. When one has a of 
 <p>Class 3: 181 people </p>
 <p>Total: 1309 people </p>
 <p>Out of which the number of people that have not survived is 809 people and the number of people survived is 465 people.</p>
+<p><strong>Fields in the Dataset:</strong> </p>
 <table class="table">
 <colgroup>
 <col style="width: 100%">
